# spatial-prop

./: .gitignore  LICENSE  README.md  aging_gnn_model.py  check_torch_cuda.py  environment.yml  g2.pt  k2_wL14_Ecpu_1852373.out  k2_wL14_Ecpu_1853551.err  pyproject.toml  run_steer_cell.slurm  run_torch_profile.slurm  setup.py
api/: perturbation_api.py
bash/: .nfs020007507801003200005502  run_baseline_debug.sh  run_baseline_eval.sh  run_baseline_eval_batch.sh  run_baselines_eval_batch.sh  run_causal_genept.sh  run_eval.sh  run_eval_debug.sh  run_go_causal_batch.sh  run_go_causal_eval_batch.sh  run_go_itxn.sh  run_steer_within_batch.sh  run_steer_within_debug.sh  run_steering_perturbation_batch.sh  run_train.sh  run_train_base.sh  run_train_benchmark_base.sh  run_train_debug.sh  run_train_genept.sh  run_train_gnn_batch.sh  run_train_sweep_k.sh  run_train_with_celltype.sh  run_train_with_celltype_batch.sh
config/: datasets.json
notebooks/: GNN_expression_eval.ipynb  api_demo.ipynb  celltype_mean_baseline.ipynb
pairs/: production_acetylcholine.csv  production_alcohol.csv  production_aldehyde.csv  production_aldosterone.csv  production_amine.csv  production_amino_acid.csv  production_arachidonate.csv  production_atp.csv  production_bile_acid.csv  production_biotin.csv  production_calcium_ion.csv  production_camp.csv  production_cannabinoid.csv  production_carbohydrate.csv  production_catecholamine.csv  production_ceramide.csv  production_cgmp.csv  production_chemokine.csv  production_cholesterol.csv  production_cobalamin.csv  production_copper_ion.csv  (+293 more)
(+87 files in other folders)
